--- a/environments/local/services/consumer/Dockerfile
+++ b/environments/local/services/consumer/Dockerfile
@@ -3,7 +3,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends curl
 RUN curl -sSL https://install.python-poetry.org | python -
 ENV PATH="/root/.local/bin:$PATH"
 WORKDIR /app
-COPY . .
-RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi --no-root
+COPY ./consumer .
+COPY ./common /common
+RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi
 ENV BOOTSTRAP_SERVERS=kafka:9092
 CMD ["poetry", "run", "main"]
