--- a/environments/local/services/producer/pyproject.toml
+++ b/environments/local/services/producer/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11,<4.0.0"
 dependencies = [
     "kafka-python (>=2.1.5,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
+    "watchdog (>=6.0.0,<7.0.0)",
 ]
 
 [tool.poetry]
