--- a/environments/local/services/validator/Dockerfile
+++ b/environments/local/services/validator/Dockerfile
@@ -3,7 +3,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends curl
 RUN curl -sSL https://install.python-poetry.org | python -
 ENV PATH="/root/.local/bin:$PATH"
 WORKDIR /app
-COPY ./producer .
+COPY ./validator .
 COPY ./common /common
 RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi
 ENV BOOTSTRAP_SERVERS=kafka:9092
