--- a/environments/local/services/validator/pyproject.toml
+++ b/environments/local/services/validator/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "consumer"
+name = "validator"
 version = "0.1.0"
 description = ""
 authors = [{ name = "David Sillman", email = "dsillman2000@gmail.com" }]
@@ -7,6 +7,8 @@ requires-python = ">=3.11,<4.0.0"
 dependencies = [
     "kafka-python (>=2.1.5,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
+    "watchdog (>=6.0.0,<7.0.0)",
+    "crc (>=7.1.0,<8.0.0)",
 ]
 
 [tool.poetry]
